--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="col-md-3">
                     <div class="service bg-body">
                         <div class="service-head">
-                            <img class="img-fluid" src="images/PLATE SHEARING.jpg" alt="PLATE SHEARING" />
+                            <img class="img-fluid" src="images/PLATE-SHEARING.webp" alt="PLATE SHEARING" />
                             <div class="p-2 caption">
                                 <h5>Plate cutting Sheets</h5>
                                 <p>accourding to the required sizes.</p>
@@ -172,7 +172,7 @@
                 <div class="col-md-3">
                     <div class="service bg-body">
                         <div class="service-head">
-                            <img class="img-fluid" src="images/DSCN7544.jpg" alt="Bending Plate Sheets" />
+                            <img class="img-fluid" src="images/DSCN7544.webp" alt="Bending Plate Sheets" />
                             <div class="p-2 caption">
                                 <h5>Bending Plate Sheets</h5>
                                 <p>according to the dimensions.</p>
@@ -183,7 +183,7 @@
                 <div class="col-md-3">
                     <div class="service bg-body">
                         <div class="service-head">
-                            <img class="img-fluid" src="images/DSCN5467.JPG" alt="Rolling" />
+                            <img class="img-fluid" src="images/DSCN5467.webp" alt="Rolling" />
                             <div class="p-2 caption">
                                 <h5>Rolling</h5>
                                 <p>All types of custom-made rolling.</p>
@@ -194,7 +194,7 @@
                 <div class="col-md-3">
                     <div class="service bg-body">
                         <div class="service-head">
-                            <img class="img-fluid" src="images/DSCN7892.jpg" alt="anufacture & installation" />
+                            <img class="img-fluid" src="images/DSCN7892.webp" alt="anufacture & installation" />
                             <div class="p-2 caption">
                                 <h5>Manufacture & installation</h5>
                                 <p>
