--- a/index.html
+++ b/index.html
@@ -232,22 +232,21 @@
                 </li>
             </ul>
             <div class="row mt-3">
-                <div class="col-md-6">
-                    <div class="photo-preview">
+                <div class="col-md-12 ">
+                    <div class="photo-preview  mx-auto">
                         <div class="arows">
                             <i class="fa-solid fa-chevron-left fa-2xl"></i>
                             <i class="fa-solid fa-chevron-right fa-2xl"></i>
                             <!-- <i class="fa-solid fa-backward fa-2xl"></i>
                             <i class="fa-solid fa-forward fa-2xl"></i> -->
                         </div>
-                        
-                        <div class="text-center bg-body">
-                            hello
+                        <div class="bg-dark  main-photo">
+                            <img class="w-100" src="./images/a ragab/1.jpg" alt="Warehouse">
                         </div>
-                        <div class="bg-body  main-photo">
-                            <img class="img-fluid" src="./images/a ragab/1.jpg" alt="Warehouse">
+                        <div class="text-center bg-body fs-5 fw-bold caption">
+                            Project weight : <span class="text-danger">350 TONS</span>
                         </div>
-                        <div class=" bg-body d-flex ">
+                        <div class=" bg-body d-flex collect">
                             <img class="img-fluid w-25 px-1" src="./images/a ragab/2.jpg" alt="Warehouse">
                             <img class="img-fluid w-25 px-1" src="./images/a ragab/3.jpg" alt="Warehouse">
                             <img class="img-fluid w-25 px-1" src="./images/a ragab/4.jpg" alt="Warehouse">
@@ -257,9 +256,7 @@
                     
 
                 </div>
-                <div class="col-md-6">
 
-                </div>
             </div>
         </div>
     </section>
