--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="#testmonial">Testmonial</a>
-                    </li>
+                    </li> -->
                     <li class="nav-item">
-                        <a class="nav-link" href="#clints">Clients</a>
+                        <a class="nav-link" href="#clients">Clients</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#contact">Contact</a>
@@ -253,10 +253,8 @@
                             <img class="img-fluid w-25 px-1" src="./images/a ragab/5.jpg" alt="Warehouse">
                         </div>
                     </div>
-                    
 
                 </div>
-
             </div>
         </div>
     </section>
@@ -265,10 +263,77 @@
     <section class="testmonial" id="testmonial"></section>
     <!-- End Testmonial -->
     <!-- Start Client -->
-    <section class="client" id="client"></section>
+    <section class="client p-5" id="clients">
+        <div class="titles text-center py-5">
+            <h2 class="fs-1 fw-bolder">Our Clients</h2>
+        </div>
+        <div class="container ">
+            <div class="row g-5">
+
+                <img class="w-25 col" src="images/client/1.jpg" alt="">
+                <img class="w-25 col" src="images/client/2.jpg" alt="">
+                <img class="w-25 col" src="images/client/3.jpg" alt="">
+                <img class="w-25 col" src="images/client/4.jpg" alt="">
+                <img class="w-25 col" src="images/client/5.jpg" alt="">
+                <img class="w-25 col" src="images/client/6.jpg" alt="">
+                <img class="w-25 col" src="images/client/7.jpg" alt="">
+                <img class="w-25 col" src="images/client/8.jpg" alt="">
+
+            </div>
+        </div>
+    </section>
     <!-- End Client -->
     <!-- Start contact -->
-    <section class="contact" id="contact"></section>
+    <section class="contact py-5" id="contact">
+        <!-- <div class="titles text-center py-5">
+            <h2 class="fs-1 fw-bolder">Contact Us</h2>
+        </div> -->
+        <div class="container py-5">
+            <div class="ps-md-4 px-1">
+                <h3>Send Message Us</h3>
+                <div class="row">
+                    <div class="col-md-7">
+                        <div class="my-5">
+                            <form action=""></form>
+                            <input type="text" class="form-control mb-3 p-2" id="exampleFormControlInput1"
+                                placeholder="Your Name">
+                            <input type="email" class="form-control mb-3 p-2" id="exampleFormControlInput1"
+                                placeholder="Yor Email">
+                            <input type="email" class="form-control mb-3 p-2" id="exampleFormControlInput1"
+                                placeholder="Subject">
+                            <textarea class="form-control mb-3 p-2" id="exampleFormControlTextarea1" rows="4"
+                                placeholder="Message"></textarea>
+                            <div class="text-center mx-auto my-5">
+                                <button class="btn  rounded-5 fs-5 fw-semibold py-2" type="button">Send
+                                    Message</button>
+                            </div>
+                            </form>
+                        </div>
+                    </div>
+                    <div class="col-md-5">
+                        <div class="px-sm-1">
+                            <div class="my-5">
+                                <div class="info">
+                                    <span>Address: </span> Plot No. 233-234 Industrial Zone A6, 10th of Ramadan City, Egypt.
+                                </div>
+                                <div class="info">
+                                    <span>Mobile: </span> (+20) 1069333338</span>
+                                </div>
+                                <div class="info">
+                                    <span>Email: </span> Info@union-egy.com</span>
+                                </div>
+                                <div class="social pt-5 ">
+                                    <a href="https://www.facebook.com/unionmcegy"><i class="fa-brands fa-facebook-square fa-2xl"></i></a>
+                                    <a href="https://www.linkedin.com/company/union-for-metal-constructions/"><i class="fa-brands fa-linkedin  fa-2xl"></i></a>
+                                    <a href="https://wa.me/+201069333338"><i class="fa-brands fa-whatsapp-square fa-2xl"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <!-- End Contact -->
 
     <!-- Start Footer -->
