--- a/index.html
+++ b/index.html
@@ -270,14 +270,14 @@
         <div class="container ">
             <div class="row g-5">
 
-                <img class="w-25 col" src="images/client/1.jpg" alt="">
-                <img class="w-25 col" src="images/client/2.jpg" alt="">
-                <img class="w-25 col" src="images/client/3.jpg" alt="">
-                <img class="w-25 col" src="images/client/4.jpg" alt="">
-                <img class="w-25 col" src="images/client/5.jpg" alt="">
-                <img class="w-25 col" src="images/client/6.jpg" alt="">
-                <img class="w-25 col" src="images/client/7.jpg" alt="">
-                <img class="w-25 col" src="images/client/8.jpg" alt="">
+                <img class="col-md-3 " src="images/client/1.jpg" alt="">
+                <img class="col-md-3 " src="images/client/2.jpg" alt="">
+                <img class="col-md-3 " src="images/client/3.jpg" alt="">
+                <img class="col-md-3 " src="images/client/4.jpg" alt="">
+                <img class="col-md-3 " src="images/client/5.jpg" alt="">
+                <img class="col-md-3 " src="images/client/6.jpg" alt="">
+                <img class="col-md-3 " src="images/client/7.jpg" alt="">
+                <img class="col-md-3 " src="images/client/8.jpg" alt="">
 
             </div>
         </div>
